# satscanner

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  Project Plan.md  README.md  config.toml  config.toml.example
src/: app.rs  config.rs  log.rs  main.rs
src/satellite/: coords.rs  mod.rs  propagate.rs  skypos.rs  tle.rs
src/ui/: help.rs  log_panel.rs  mod.rs  widgets.rs
src/views/: globe_bands.rs  globe_scale.rs  mod.rs  overhead.rs
